{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 260,
  "lineage": "f85e4374-ed2e-f75d-5bf3-dca6c86d4ffd",
  "resources": [
    {
      "module": "module.lambdas_security_group_id",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:660472391051:security-group/sg-06d047aaefdda47fe",
            "description": "Security Group managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65356
              }
            ],
            "id": "sg-06d047aaefdda47fe",
            "ingress": [],
            "name": "lambdas-security-group-20230208084944539600000003",
            "name_prefix": "lambdas-security-group-",
            "owner_id": "660472391051",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lambdas-security-group"
            },
            "tags_all": {
              "Name": "lambdas-security-group",
              "author": "Grupo 1",
              "created-by": "terraform",
              "subject": "Cloud Computing",
              "university": "ITBA",
              "version": "1"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0b205d90c12fd069e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.lambdas_security_group_id",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress Rule",
            "from_port": 0,
            "id": "sgrule-1558872927",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06d047aaefdda47fe",
            "security_group_rule_id": "sgr-0129a9c49c17286f5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65356,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lambdas_security_group_id.aws_security_group.this",
            "module.lambdas_security_group_id.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.replica_backend_db_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:660472391051:security-group/sg-0572ad48f4c7b5a6c",
            "description": "Open access to PG instance.",
            "egress": [],
            "id": "sg-0572ad48f4c7b5a6c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "psql into the DB",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "Ingress Rule",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06d047aaefdda47fe"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "cloud-db-20230208084944539100000002",
            "name_prefix": "cloud-db-",
            "owner_id": "660472391051",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloud-db"
            },
            "tags_all": {
              "Name": "cloud-db",
              "author": "Grupo 1",
              "created-by": "terraform",
              "subject": "Cloud Computing",
              "university": "ITBA",
              "version": "1"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0b205d90c12fd069e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rds.module.replica_backend_db_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "psql into the DB",
            "from_port": 0,
            "id": "sgrule-1002235520",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0572ad48f4c7b5a6c",
            "security_group_rule_id": "sgr-050fa3e74cdb05437",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds.module.replica_backend_db_security_group.aws_security_group.this",
            "module.rds.module.replica_backend_db_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds.module.replica_backend_db_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": 5432,
            "id": "sgrule-28794211",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0572ad48f4c7b5a6c",
            "security_group_rule_id": "sgr-05b9ca45f41c0dc63",
            "self": false,
            "source_security_group_id": "sg-06d047aaefdda47fe",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lambdas_security_group_id.aws_security_group.this",
            "module.lambdas_security_group_id.aws_security_group.this_name_prefix",
            "module.rds.module.replica_backend_db_security_group.aws_security_group.this",
            "module.rds.module.replica_backend_db_security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:660472391051:internet-gateway/igw-0cf563e9541b85a80",
            "id": "igw-0cf563e9541b85a80",
            "owner_id": "660472391051",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc",
              "author": "Grupo 1",
              "created-by": "terraform",
              "subject": "Cloud Computing",
              "university": "ITBA",
              "version": "1"
            },
            "vpc_id": "vpc-0b205d90c12fd069e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cf563e9541b85a80",
            "id": "r-rtb-080e4ebc56d1fe0121080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-080e4ebc56d1fe012",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:660472391051:route-table/rtb-0077e7486a313329f",
            "id": "rtb-0077e7486a313329f",
            "owner_id": "660472391051",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "main-vpc-private-us-east-1a",
              "author": "Grupo 1",
              "created-by": "terraform",
              "subject": "Cloud Computing",
              "university": "ITBA",
              "version": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b205d90c12fd069e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:660472391051:route-table/rtb-078b1f036584358bd",
            "id": "rtb-078b1f036584358bd",
            "owner_id": "660472391051",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "main-vpc-private-us-east-1b",
              "author": "Grupo 1",
              "created-by": "terraform",
              "subject": "Cloud Computing",
              "university": "ITBA",
              "version": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b205d90c12fd069e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:660472391051:route-table/rtb-080e4ebc56d1fe012",
            "id": "rtb-080e4ebc56d1fe012",
            "owner_id": "660472391051",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cf563e9541b85a80",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-vpc-public"
            },
            "tags_all": {
              "Name": "main-vpc-public",
              "author": "Grupo 1",
              "created-by": "terraform",
              "subject": "Cloud Computing",
              "university": "ITBA",
              "version": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b205d90c12fd069e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b2a57ddbe52cce0",
            "route_table_id": "rtb-0077e7486a313329f",
            "subnet_id": "subnet-0b4e5d79a74cba8ad"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099351707fcf19cf3",
            "route_table_id": "rtb-078b1f036584358bd",
            "subnet_id": "subnet-01b70b499ef33332b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f9c514e3c3cd51d",
            "route_table_id": "rtb-080e4ebc56d1fe012",
            "subnet_id": "subnet-0e11e44358cced092"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03bfa9af19dc33c88",
            "route_table_id": "rtb-080e4ebc56d1fe012",
            "subnet_id": "subnet-0cafc4bed025734a2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:660472391051:subnet/subnet-0b4e5d79a74cba8ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4e5d79a74cba8ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "660472391051",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "main-vpc-private-us-east-1a",
              "author": "Grupo 1",
              "created-by": "terraform",
              "subject": "Cloud Computing",
              "university": "ITBA",
              "version": "1"
            },
            "vpc_id": "vpc-0b205d90c12fd069e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:660472391051:subnet/subnet-01b70b499ef33332b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b70b499ef33332b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "660472391051",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "main-vpc-private-us-east-1b",
              "author": "Grupo 1",
              "created-by": "terraform",
              "subject": "Cloud Computing",
              "university": "ITBA",
              "version": "1"
            },
            "vpc_id": "vpc-0b205d90c12fd069e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:660472391051:subnet/subnet-0e11e44358cced092",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e11e44358cced092",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "660472391051",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "main-vpc-public-us-east-1a",
              "author": "Grupo 1",
              "created-by": "terraform",
              "subject": "Cloud Computing",
              "university": "ITBA",
              "version": "1"
            },
            "vpc_id": "vpc-0b205d90c12fd069e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:660472391051:subnet/subnet-0cafc4bed025734a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cafc4bed025734a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "660472391051",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Name": "main-vpc-public-us-east-1b",
              "author": "Grupo 1",
              "created-by": "terraform",
              "subject": "Cloud Computing",
              "university": "ITBA",
              "version": "1"
            },
            "vpc_id": "vpc-0b205d90c12fd069e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:660472391051:vpc/vpc-0b205d90c12fd069e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-030c7b18f501f6333",
            "default_route_table_id": "rtb-07e2f769f334b209f",
            "default_security_group_id": "sg-06d5ffa239e11f933",
            "dhcp_options_id": "dopt-04ec9c7433ca9c733",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b205d90c12fd069e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07e2f769f334b209f",
            "owner_id": "660472391051",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc",
              "author": "Grupo 1",
              "created-by": "terraform",
              "subject": "Cloud Computing",
              "university": "ITBA",
              "version": "1"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}